Добавлены новые функции, подключена база данных, подключен org.apache.commons.io.FileUtils;